--- a/src/App.css
+++ b/src/App.css
@@ -141,7 +141,7 @@
   justify-content: space-around;
   background-color: rgb(56, 122, 134);
   box-shadow: rgba(56, 122, 134, 0.1) 0px 10px 15px -3px, rgba(56, 122, 134, 0.05) 0px 4px 6px -2px, rgba(56, 122, 134, 0.05) 0px 4px 6px -2px;
-
+  border-radius: 0px 0px 10px 10px;
 }
 
 .cart_nav input {
@@ -165,7 +165,7 @@
   font-size: 25px;
 }
 
-.nav_item_cart {
+.nav_item_cart1 {
   background-color: white;
   padding: 10px 40px;
   color: #1676aa;
@@ -176,6 +176,19 @@
   border-radius: 10px;
 
 }
+  .nav_item_cart{
+    position: absolute;
+    top: -60px;
+    right: 150px;
+    background-color:  #1676aa;
+    padding: 10px 10px;
+    color: #fff;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    /* font-weight: 700; */
+    font-size: 15px;
+    border-radius: 10px;
+  }
 
 
 
@@ -203,7 +216,7 @@
 
 .product_button {
   background-color: rgb(56, 122, 134);
-  color: white;
+  color: #fff;
   font-size: 20px;
 }
 
@@ -330,10 +343,21 @@
   color: #1676aa;
   text-decoration: none;
   font-family: 'Times New Roman', Times, serif;
-  font-weight: 700;
+  /* font-weight: 700; */
   font-size: 25px;
   border-radius: 10px;
 
+}
+.clear-cart{
+  float: right;
+  background-color: white;
+  padding: 5px 5px;
+  color: #1676aa;
+  text-decoration: none;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
+  border-radius: 10px;
+  margin: 5px;
 }
 
 .cart_head {
@@ -383,7 +407,7 @@
 
 .cart_empty {
   text-align: center;
-  padding: 50px 50px 100px 50px;
+  padding: 130px 50px 130px 50px;
 
 }
 .totalPrice{
@@ -440,7 +464,7 @@
 
 .search_add_section {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 30px 0px;
 }
 
@@ -566,11 +590,6 @@
   .cart_nav input {
     width: 40%;
   }
-  .single_img {
-    /* transform: translate(15%,15%); */
-  
-  }
-
 
 }
 
@@ -600,11 +619,25 @@
     font-size: 20px;
   }
   
-  .nav_item_cart {
+  .nav_item_cart1 {
     padding: 5px 10px;
     
-  
   }
+
+  .nav_item_cart{
+    position: absolute;
+    top: -60px;
+    right: 150px;
+    background-color:  #1676aa;
+    padding: 10px 10px;
+    color: #fff;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 700;
+    font-size: 15px;
+    border-radius: 10px;
+  }
+
   .cart_nav input {
     width: 40%;
   }
@@ -801,13 +834,21 @@
     font-size: 20px;
   }
 
-  .nav_item_cart {
+  .nav_item_cart1 { 
     text-align: center;
     padding: 10px 10px;
     font-weight: 700;
     font-size: 20px;
     margin: 10px 0px;
 
+   }
+
+  .nav_item_cart{
+    border-radius: 10px;
+    padding: 7px;
+    font-size: 10px;
+    top: -43px;
+    right: 100px;
   }
 
   .user_navbars {
@@ -821,7 +862,7 @@
     flex-direction: column;
     justify-content: center;
   }
-  .nav_item_carts {
+  .nav_item_carts1 {
     padding: 10px 40px;
     text-decoration: none;
     font-weight: 700;
@@ -922,7 +963,7 @@
     font-size: 20px;
   }
 
-  .nav_item_cart {
+  .nav_item_cart1 {
     text-align: center;
     padding: 10px 10px;
     font-weight: 700;
@@ -930,7 +971,13 @@
     margin: 10px 0px;
 
   }
-
+  .nav_item_cart{
+    border-radius: 10px;
+    padding: 7px;
+    font-size: 10px;
+    top: -43px;
+    right: 100px;
+  }
   .user_navbars {
     top: 60px;
 
@@ -955,12 +1002,19 @@
     font-size: 20px;
   }
 
-  .nav_item_carts {
+  /* .nav_item_carts {
     padding: 10px 40px;
     text-decoration: none;
     font-weight: 700;
     font-size: 20px;
     margin: 10px 0px;
+  } */
+  .cart_head {
+    color: #1676aa;
+    padding: 10px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
   }
 
   .admin_image{
