--- a/src/App.css
+++ b/src/App.css
@@ -204,6 +204,7 @@
 .product_btn {
   display: flex;
   justify-content: center;
+  cursor: pointer;
 }
 
 .products_header {
@@ -214,10 +215,20 @@
 
 }
 
-.product_button {
+.clicked {
+  background-color: rgb(6, 12, 45);
+  color: #fff;
+  font-size: 20px; 
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.unclicked {
   background-color: rgb(56, 122, 134);
   color: #fff;
   font-size: 20px;
+  border-radius: 10px;
+  padding: 5px; 
 }
 
 .card {
@@ -761,6 +772,7 @@
 
   .product_btn_links {
     padding: 10px 0px;
+    
   }
 
   .product_btn {
@@ -768,9 +780,14 @@
     flex-direction: column;
   }
 
-  .product_button {
-    font-size: 20px;
-    margin: 5px 10px;
+  .clicked {
+    text-align: center;
+    margin: 10px;
+  }
+  
+  .unclicked {
+    text-align: center;
+    margin: 10px;
   }
 
   .cart_products {
@@ -1002,13 +1019,6 @@
     font-size: 20px;
   }
 
-  /* .nav_item_carts {
-    padding: 10px 40px;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 20px;
-    margin: 10px 0px;
-  } */
   .cart_head {
     color: #1676aa;
     padding: 10px;
@@ -1023,6 +1033,7 @@
     transform: translate(0%,0%);
 
   }
+
 
 }
 
